# Faebench

./: .gitignore  Environment.py  Orchestrator.py  Rewards.py  pyproject.toml  run_ollama.py
display/: server.py  viewer.html
prompts/: reasoning_prompts.py
